# agentic-git

./: Cargo.toml  LICENSE  NOTICE  README.md  README.zh-TW.md
.github/workflows/: ci.yml  release.yml
assets/hooks/: prepare-commit-msg  prepare-commit-msg.ps1  reference-transaction
crates/agentic-git/: Cargo.toml
crates/agentic-git-core/: Cargo.toml
crates/agentic-git-core/src/: binding.rs  integrity_core.rs  lib.rs  protected_refs.rs
crates/agentic-git-core/src/integrity_core/: p1a_contract.rs
crates/agentic-git/assets/hooks/: prepare-commit-msg.ps1
crates/agentic-git/src/: classify.rs  cli.rs  exec.rs  lib.rs  main.rs  paths.rs  push_guards.rs  snapshot.rs  telemetry.rs  tests.rs
crates/agentic-git/src/cli/: tests.rs
crates/agentic-git/src/snapshot/: tests.rs
crates/agentic-git/tests/: cross_agent_identity.rs  exec_reachability_invariant.rs  legacy_env_adoption.rs  session_mode.rs  shim_modules_30.rs  shim_phase1.rs  shim_phase1_stress.rs  shim_phase2.rs  shim_phase3_stress.rs  shim_phase4_stress.rs  shim_phase5_stress.rs  shim_recursion_guard_1504.rs  smoke.rs  snapshots.rs  submodule_policy.rs
crates/agentic-git/tests/fixtures/: binding-agend-v1.json  binding-run-v1.json  binding-unsupported-v2.json
demo/: README.md  playground.sh  recovery-demo.sh
demo/multi-agent/: README.md  agent-launch.sh  agent-run.sh  lib.sh  live.sh  verify.sh
demo/sandbox/: .gitignore  README.md  enter.sh
docs/: embedder-contract-v1.md
src/: integrity_core.rs  protected_refs.rs
tests/: agend_git_shim_phase1.rs  agend_git_shim_phase1_stress.rs  agend_git_shim_phase2.rs  agend_git_shim_phase3_stress.rs  agend_git_shim_phase4_stress.rs  agend_git_shim_phase5_stress.rs  shim_recursion_guard_1504.rs
