[package]
name = "agentic-git-core"
description = "Contract modules shared between the agentic-git shim and any embedding system: binding HMAC integrity and the protected-ref predicate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hmac = "0.13"
sha2 = "0.11"
